forms-flow-forms/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-forms
  namespace : forms-flow-forms
  labels:
    app.kubernetes.io/name: forms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-forms
          image: formsflow/forms-flow-forms:v5.1.0
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
